# terminal-edit

./: .gitignore  CMakeLists.txt  LICENSE  README.md  clear.sh
example/: CommandProcessor.cpp  CommandProcessor.h  FileTab.cpp  FileTab.h  main.cpp
src/: ColumnPrinter.cpp  ColumnPrinter.h  History.cpp  History.h  ITab.h  TermLines.cpp  TermLines.h  Terminal.cpp  Terminal.h  strutils.cpp  strutils.h
